Improve game launch process, add launcher scripts, and enhance module configuration
Co-authored-by: aethrius73 <aethrius73@gmail.com>